Better HTML semantics + spacing fixes

--- a/scss/components/core/_Footer.scss
+++ b/scss/components/core/_Footer.scss
@@ -121,7 +121,7 @@ footer {
         }
 
         .right {
-          .nav {
+          nav {
             display: grid;
             grid-template-columns: repeat(3, 175px) auto;
             column-gap: 40px;
