--- a/scss/components/home/_SpecialSection.scss
+++ b/scss/components/home/_SpecialSection.scss
@@ -67,6 +67,7 @@
         row-gap: 32px;
 
         .heading {
+          margin: 0;
           font-weight: 400;
           font-size: 40px;
           line-height: 54px;
@@ -99,6 +100,7 @@
         }
 
         .sub-heading {
+          margin: 0;
           font-weight: 400;
           font-size: 18px;
           line-height: 26px;
